K8/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apni-dukkan
  labels:
    app: apni-dukkan
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apni-dukkan
  template:
    metadata:
      labels:
        app: apni-dukkan
    spec:
      containers:
        - name: apni-dukkan
          image: suyash172003/apni-dukkan-app:latest
          ports:
            - containerPort: 80
