K8/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apni-dukkan
  labels:
    app: apni-dukkan
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: apni-dukkan
  type: NodePort
