K8/app/app_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apni-dukkan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: apni-dukkan.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apni-dukkan
                port:
                  number: 80
